--- a/main.css
+++ b/main.css
@@ -14,8 +14,13 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; }
 .topNavBar  nav >ul { list-style: none; margin: 0; padding: 0; }
 .topNavBar  nav > ul > li { float: left; margin-left: 17px; margin-right: 17px; }
 .topNavBar  nav > ul > li > a { font-size: 13px; color: inherit; font-weight: bold; border-top:3px solid transparent; border-bottom:3px solid transparent; 
-  padding-top: 5px; padding-bottom: 5px; display: block; }
-.topNavBar  nav > ul > li > a:hover { border-bottom: 3px solid #e06567; }
+  padding-top: 5px; padding-bottom: 5px; display: block; position: relative; }
+.topNavBar  nav > ul > li > a:hover { content: ''; display: block; position: absolute; top: 100%; left: 0; width: 100%;
+  background: #e06567; height: 3px; animation: menuSlide 0.3s; }
+@keyframes menuSlide {
+  0%{ width: 0; }
+  100%{ width: 100%; }
+}
 
 .topNavBar .logo { font-size: 24px; font-family: "Arial Black"; padding-top: 3px; padding-bottom: 4px; }
 .topNavBar .logo .rs { margin-right: 4px; color: #E8676B; }
