--- a/main.css
+++ b/main.css
@@ -6,22 +6,37 @@ ul,ol { list-style: none; }
 h1,h2,h3,h4,h5,h6 { font-weight: normal; }
 .clearfix::after { content: ''; display: block; clear: both; }
 
-.topNavBar { padding: 20px 0px; position: fixed;  /*脱离文档流，相对于屏幕固定*/ top: 0; left: 0; width: 100%;
+/*.topNavBar { padding: 20px 0px; position: fixed;  /*脱离文档流，相对于屏幕固定*//* top: 0; left: 0; width: 100%;
   transition: all 0.5s; color: #C0C2C5;
+}
+.topNavBar .sticky { background: white; padding: 10px 0px; z-index: 1; box-shadow: 0 0 10px rgba(0, 0, 0, 0.25); color: #3d4451; }
+*/
+.topNavBar { padding: 20px 0; position: fixed; top: 0; left: 0; width: 100%; 
+  transition: all 0.5s; color: #C0C2C5;
+}
+.topNavBar.sticky{background: white;padding: 10px 0; z-index: 1;
+  box-shadow: 0 0 10px rgba(0,0,0,0.25);color: #3d4451;
 }
 .topNavBar-inner { padding: 0px 16px; }
 .topNavBar  nav { padding-top: 5px; }
 .topNavBar  nav >ul { list-style: none; margin: 0; padding: 0; }
-.topNavBar  nav > ul > li { float: left; margin-left: 17px; margin-right: 17px; }
+.topNavBar  nav > ul > li { float: left; margin-left: 17px; margin-right: 17px; position: relative; }
 .topNavBar  nav > ul > li > a { font-size: 13px; color: inherit; font-weight: bold; border-top:3px solid transparent; border-bottom:3px solid transparent; 
   padding-top: 5px; padding-bottom: 5px; display: block; position: relative; }
-.topNavBar  nav > ul > li > a:hover { content: ''; display: block; position: absolute; top: 100%; left: 0; width: 100%;
+.topNavBar  nav > ul > li.active > a::after { content: ''; position: absolute; display: block; top: 100%; left: 0; width: 100%;
   background: #e06567; height: 3px; animation: menuSlide 0.3s; }
 @keyframes menuSlide {
   0%{ width: 0; }
   100%{ width: 100%; }
 }
-
+.topNavBar .submenu { display: none; position: absolute; right: 0; top: 100%; background: white; color: #3d4451;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); }
+.topNavBar li.active > .submenu { display: block; animation: submenuSlide 0.3s;}
+@keyframes submenuSlide { 
+  0% { margin-right: 100%; }
+  100% { margin-left: 0%; }
+}
+.topNavBar .submenu > li { white-space: nowrap; padding: 5px 10px; }
 .topNavBar .logo { font-size: 24px; font-family: "Arial Black"; padding-top: 3px; padding-bottom: 4px; }
 .topNavBar .logo .rs { margin-right: 4px; color: #E8676B; }
 .topNavBar .logo .card { color: #9A9DA2; }
