--- a/main.css
+++ b/main.css
@@ -77,12 +77,15 @@ section.skills > ol > li:nth-child(even) { float: right; }
 section.skills .progressBar { height: 5px; background: #FAE1E1; border-radius: 5px; margin: 5px 0px 40px; }
 section.skills .progressBar > .progress { height: 100%; width: 70%; background: #E8676B; border-radius: 5px; }
 section.portfolio { text-align: center; }
-section.portfolio > nav { text-align: center; display: inline-block; vertical-align: top; }
+section.portfolio > nav { text-align: center; display: inline-block; vertical-align: top; margin-top: 32px;}
 section.portfolio > nav > ol { margin: 0px auto; display: inline-block; vertical-align: top; }
-section.portfolio > nav > ol > li { float: left; margin-left: 20px; }
+section.portfolio > nav > ol > li { float: left; margin-left: 20px; cursor: pointer; }
 section.portfolio > nav > ol > li:first-child { margin-left: 0px; }
-section.portfolio > nav .bar { height: 5px; background: white; border-radius: 2px; }
-section.portfolio > nav .bar-inner { height: 100%; background: #E8676B; width: 10%; border-radius: 2px; }
-section.portfolio >nav .bar.state-1 .bar-inner { margin-left: 0px; width: 50px; }
-section.portfolio >nav .bar.state-2 .bar-inner { margin-left: 65px; width: 50px; }
-section.portfolio >nav .bar.state-3 .bar-inner { margin-left: 140px; width: 96px; }
+section.portfolio > nav .bar { height: 5px; background: white; border-radius: 2px; margin-top: 5px; margin-bottom: 28px; }
+section.portfolio > nav .bar-inner { height: 100%; background: #E8676B; width: 10%; border-radius: 2px; transition: all 0.1s; }
+section.portfolio > nav .bar.state-1 .bar-inner { margin-left: 0px; width: 50px; }
+section.portfolio > nav .bar.state-2 .bar-inner { margin-left: 65px; width: 50px; }
+section.portfolio > nav .bar.state-3 .bar-inner { margin-left: 140px; width: 96px; }
+section.portfolio > .works { position: relative; }
+section.portfolio > .works > .big,
+section.portfolio > .works > .small { position: absolute; }
