--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ section.skills > ol > li { float: left; width: 48%; box-sizing: border-box; }
 section.skills > ol > li:nth-child(even) { float: right; }
 section.skills .progressBar { height: 5px; background: #FAE1E1; border-radius: 5px; margin: 5px 0px 40px; }
 section.skills .progressBar > .progress { height: 100%; width: 70%; background: #E8676B; border-radius: 5px; }
-section.portfolio { text-align: center; }
+section.portfolio { text-align: center; margin-bottom: 100px; }
 section.portfolio > nav { text-align: center; display: inline-block; vertical-align: top; margin-top: 32px;}
 section.portfolio > nav > ol { margin: 0px auto; display: inline-block; vertical-align: top; }
 section.portfolio > nav > ol > li { float: left; margin-left: 20px; cursor: pointer; }
