--- a/main.css
+++ b/main.css
@@ -23,7 +23,8 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; }
 .topNavBar  nav > ul > li { float: left; margin-left: 17px; margin-right: 17px; position: relative; }
 .topNavBar  nav > ul > li > a { font-size: 13px; color: inherit; font-weight: bold; border-top:3px solid transparent; border-bottom:3px solid transparent; 
   padding-top: 5px; padding-bottom: 5px; display: block; position: relative; }
-.topNavBar  nav > ul > li.active > a::after { content: ''; position: absolute; display: block; top: 100%; left: 0; width: 100%;
+.topNavBar  nav > ul > li.active > a::after,
+.topNavBar  nav > ul > li.highlight > a::after { content: ''; position: absolute; display: block; top: 100%; left: 0; width: 100%;
   background: #e06567; height: 3px; animation: menuSlide 0.3s; }
 @keyframes menuSlide {
   0%{ width: 0; }
