--- a/main.css
+++ b/main.css
@@ -11,6 +11,12 @@ h1,h2,h3,h4,h5,h6 { font-weight: normal; }
 }
 .topNavBar .sticky { background: white; padding: 10px 0px; z-index: 1; box-shadow: 0 0 10px rgba(0, 0, 0, 0.25); color: #3d4451; }
 */
+[data-x].offset { transform: translateY(100px); }
+[data-x] { transform: translateY(0); transition: all 0.5s; }
+@keyframes slideUp {
+  0% {transform: translateY(-30px);}
+  100% {transform: translateY(0);}
+}
 .topNavBar { padding: 20px 0; position: fixed; top: 0; left: 0; width: 100%; 
   transition: all 0.5s; color: #C0C2C5;
 }
