--- a/main.css
+++ b/main.css
@@ -85,16 +85,9 @@ section.skills .progressBar { height: 5px; background: #FAE1E1; border-radius: 5
 section.skills .progressBar > .progress { height: 100%; width: 70%; background: #E8676B; border-radius: 5px; transform: translateX(0); transition: all 1s; }
 section.skills.offset .progress { transform: translateX(-100%); }
 
-section.portfolio { text-align: center; margin-bottom: 100px; }
-section.portfolio > nav { text-align: center; display: inline-block; vertical-align: top; margin-top: 32px;}
-section.portfolio > nav > ol { margin: 0px auto; display: inline-block; vertical-align: top; }
-section.portfolio > nav > ol > li { float: left; margin-left: 20px; cursor: pointer; }
-section.portfolio > nav > ol > li:first-child { margin-left: 0px; }
-section.portfolio > nav .bar { height: 5px; background: white; border-radius: 2px; margin-top: 5px; margin-bottom: 28px; }
-section.portfolio > nav .bar-inner { height: 100%; background: #E8676B; width: 10%; border-radius: 2px; transition: all 0.1s; }
-section.portfolio > nav .bar.state-1 .bar-inner { margin-left: 0px; width: 50px; }
-section.portfolio > nav .bar.state-2 .bar-inner { margin-left: 65px; width: 50px; }
-section.portfolio > nav .bar.state-3 .bar-inner { margin-left: 140px; width: 96px; }
-section.portfolio > .works { position: relative; }
-section.portfolio > .works > .big,
-section.portfolio > .works > .small { position: absolute; }
+section.portfolio { text-align: center; margin-bottom: 100px; max-width: 812px; }
+section.portfolio > h2 { text-align: center; margin-bottom: 32px; }
+section.portfolio .swiper-container { position: inherit; width: 800px; height: 422px; }
+section.portfolio .swiper-button-prev,
+section.portfolio .swiper-button-next { background-color: white; width: 64px; height: 64px; top: 54.5%; right: 100%; left: auto; border-radius: 50%; }
+section.portfolio .swiper-button-next { left: 100%; right: auto; }
