--- a/main.css
+++ b/main.css
@@ -86,8 +86,10 @@ body > main .downloadResume-wrapper { text-align: center; }
 body > main .downloadResume { font-size: 14px; line-height: 16px; padding: 21px 55px; border: 1px solid #CDCFD1; display: inline-block; background: #EFEFEF; color: #3d4451; font-weight: bold; margin: 32px; border-radius: 3px; transition: 0.3s; }
 body > main .downloadResume:hover { box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.25); }
 body > main .selfIntroduction { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; font-family: kaiti; line-height: 1.8; font-size: 20px; }
+section.message,
 section.skills, section.portfolio { max-width: 940px; margin-left: auto; margin-right: auto; margin-top: 60px; }
 section.skills > h2 ,
+section.message > h2 ,
 section.portfolio > h2 { color: #3d4451; font-size: 34px; line-height: 1.2; font-weight: 600; text-align: center; }
 section.skills  h3 { font-size: 14px; line-height: 1.1; padding-right: 40px; }
 section.skills > ol { background: white; box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5); padding: 40px 50px 10px; margin-top: 30px; }
@@ -98,8 +100,13 @@ section.skills .progressBar > .progress { height: 100%; width: 70%; background: 
 section.skills.offset .progress { transform: translateX(-100%); }
 
 section.portfolio { text-align: center; margin-bottom: 100px; max-width: 812px; }
+section.message > h2 ,
 section.portfolio > h2 { text-align: center; margin-bottom: 32px; }
 section.portfolio .swiper-container { position: inherit; width: 800px; height: 422px; }
 section.portfolio .swiper-button-prev,
 section.portfolio .swiper-button-next { background-color: white; width: 64px; height: 64px; top: 54.5%; right: 100%; left: auto; border-radius: 50%; }
 section.portfolio .swiper-button-next { left: 100%; right: auto; }
+
+section.message { text-align: center; margin-bottom: 100px; max-width: 812px; }
+section.message > ol { border-top: 1px solid #CDCFD1; margin: 0 auto; max-width: 812px; }
+section.message > ol > li { padding: 16px; border-bottom: 1px solid #CDCFD1; }
